<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/str_admin_account"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/textView6" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <Button
        android:text="@string/str_stats"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:id="@+id/button5" />

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/str_set_price"
            android:layout_width="185dp"
            android:layout_height="120dp"
            android:id="@+id/button6" />

        <Button
            android:text="@string/str_set_product"
            android:layout_width="185dp"
            android:layout_height="120dp"
            android:id="@+id/button7" />
    </LinearLayout>
</LinearLayout>