<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="0.31" />

        <TextView
        android:text="@string/str_tickets"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:id="@+id/textView3"
            android:layout_weight="0.11" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="8"
        android:id="@+id/editText"
        android:hint="@string/str_username"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/str_pwd"
        android:ems="10"
        android:id="@+id/editText2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:text="@string/str_connexion" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />


    <Button
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:text="@string/str_create_account" />

</LinearLayout>